exoscale/exoip.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: exoip
  namespace: kube-system
  labels:
    app: exoip
spec:
  containers:
    -
      name: exoip
      image: exoscale/exoip:v0.4.3
      args:
        - -W
      ports:
        -
          containerPort: 12345
          hostPort: 12345
          name: exoip
      resources:
        limits:
          cpu: "0.1"
          memory: "100Mi"
  hostNetwork: true 
  restartPolicy: Always
