exoscale/externaldns.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: external-dns
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: registry.opensource.zalan.do/teapot/external-dns:v0.5.14
        args:
        - --interval=20s
        - --source=service
        - --source=ingress
        - --provider=exoscale
        - --domain-filter=whizus.net
        - --policy=sync
        - --txt-owner-id=whizus
        - --registry=txt
        - --exoscale-endpoint=https://api.exoscale.com/dns
        - --exoscale-apikey=$EXOSCALE_API_KEY
        - --exoscale-apisecret=$EXOSCALE_API_SECRET
        resources:
          limits:
            cpu: "0.1"
            memory: "100Mi"
