exoscale/demo-with-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/target: $IP
    external-dns.alpha.kubernetes.io/ttl: "120"
spec:
  rules:
  - host: demo-with-ingress.whizus.net
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
  type: ClusterIP

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
spec:
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.1"
            memory: "100Mi"
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "echo Hi from ingress demo > /usr/share/nginx/html/index.html"]
